--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   pinput:
   shimmer_effect: ^1.0.4
   flutter_svg: ^2.0.10+1
+  # google_maps_flutter: ^2.6.0
 
 dev_dependencies:
   flutter_test:
